# retrieve-augmented-generation-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run_integration_test.sh
examples/: demo.ipynb  example.ipynb  realtime-decision copy.ipynb  realtime-decision.ipynb
integration_test/: test_app.py
rag/: config.py  main.py  schemas.py
rag/api/: router.py
rag/api/api_v1/: query.py  root.py
rag/core/: api.py
rag/core/document_loader/: base.py
rag/core/embeddings/: embedding_model.py
rag/core/llm_chat/: llm_chat.py
rag/core/vector_store/: base.py
src/: schemas.py
src/api/v1/: query.py
src/core/: api.py
src/llms/: base_llm.py  custom_llm.py
tests/: test_api.py
