[tool.poetry]
name = "retrieve-augmented-generation-demo"
version = "0.1.0"
description = ""
authors = ["jitingxu1 <jack9527xu@gmail.com>"]
readme = "README.md"
packages = [{include = "core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
langchain = "^0.0.236"
python-multipart = "0.0.5"
pypdf = "3.15.1"
llama-cpp-python = "0.1.78"
python-decouple = "3.8"
nltk = "3.8.1"
pinecone-client = {version = "2.2.2", extras = ["grpc"]}
openai = "0.27.7"
tiktoken = "0.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"

[tool.poetry.scripts]
core = 'core.api:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
